# dynamodb-mcp-server

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
src/dynamodb_mcp_server/: __main__.py  models.py  server.py  utils.py
src/dynamodb_mcp_server/tools/: item_operations.py  query_scan.py  table_management.py
tests/: conftest.py  test_item_operations.py  test_query_scan.py  test_table_management.py  test_utils.py
